--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,28 @@ select {
     border-radius: 5px;
 }
 
+tr:nth-child(even) select {
+    border: 1px solid #1E1E1E; /* Border color */
+    background-color: #1E1E1E; /* Background color */
+    color: white; /* Text color (optional) */
+}
+
 /* Customize the option styles based on the text */
 select option {
     padding: 5px;
+}
+
+/* Green for value=1 */
+select option[value=1] {
+    color: green;
+}
+
+/* Orange/yellowish for value=2 */
+select option[value=2] {
+    color: orange;
+}
+
+/* Red for value=3 */
+select option[value=3] {
+    color: red;
 }
